
[TestMetricbeatConfig/default - 1]
metricbeat.modules:
  # https://www.elastic.co/guide/en/beats/metricbeat/7.14/metricbeat-module-elasticsearch.html
  - module: elasticsearch
    metricsets:
      - ccr
      - cluster_stats
      - enrich
      - index
      - index_recovery
      - index_summary
      - ml_job
      - node
      - node_stats
      - pending_tasks
      - shard

    period: 10s
    xpack.enabled: true
    hosts: ["https://localhost:9200"]
    username: elastic
    password: secret
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/no_CA - 1]
metricbeat.modules:
  # https://www.elastic.co/guide/en/beats/metricbeat/7.14/metricbeat-module-elasticsearch.html
  - module: elasticsearch
    metricsets:
      - ccr
      - cluster_stats
      - enrich
      - index
      - index_recovery
      - index_summary
      - ml_job
      - node
      - node_stats
      - pending_tasks
      - shard

    period: 10s
    xpack.enabled: true
    hosts: ["https://localhost:9200"]
    username: elastic
    password: secret
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/post_8.7.0_with_ingest - 1]
metricbeat.modules:
  # https://www.elastic.co/guide/en/beats/metricbeat/7.14/metricbeat-module-elasticsearch.html
  - module: elasticsearch
    metricsets:
      - ccr
      - cluster_stats
      - enrich
      - index
      - index_recovery
      - index_summary
      - ingest_pipeline
      - ml_job
      - node
      - node_stats
      - pending_tasks
      - shard

    period: 10s
    xpack.enabled: true
    hosts: ["https://localhost:9200"]
    username: elastic
    password: secret
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}
setup.template.settings:
  index.mapping.total_fields.limit: 12500

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/no_TLS - 1]
metricbeat.modules:
  # https://www.elastic.co/guide/en/beats/metricbeat/7.14/metricbeat-module-elasticsearch.html
  - module: elasticsearch
    metricsets:
      - ccr
      - cluster_stats
      - enrich
      - index
      - index_recovery
      - index_summary
      - ml_job
      - node
      - node_stats
      - pending_tasks
      - shard

    period: 10s
    xpack.enabled: true
    hosts: ["https://localhost:9200"]
    username: elastic
    password: secret
    ssl.enabled: false
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}

# Elasticsearch output configuration is generated

---

[TestMetricbeatConfig/latest_ES_versions:_higher_field_limit - 1]
metricbeat.modules:
  # https://www.elastic.co/guide/en/beats/metricbeat/7.14/metricbeat-module-elasticsearch.html
  - module: elasticsearch
    metricsets:
      - ccr
      - cluster_stats
      - enrich
      - index
      - index_recovery
      - index_summary
      - ingest_pipeline
      - ml_job
      - node
      - node_stats
      - pending_tasks
      - shard

    period: 10s
    xpack.enabled: true
    hosts: ["https://localhost:9200"]
    username: elastic
    password: secret
    ssl.enabled: true
    # The ssl verification_mode is set to `certificate` in the config template to verify that the certificate is signed by a trusted authority,
    # but does not perform any hostname verification. This is used when SSL is enabled with or without CA, to support self-signed certificate
    # with a custom CA or custom certificates with or without a CA that most likely are not issued for `localhost`.
    ssl.verification_mode: "certificate"
    ssl.certificate_authorities: ["/mount/ca.crt"]

processors:
  - add_cloud_metadata: {}
  - add_host_metadata: {}
setup.template.settings:
  index.mapping.total_fields.limit: 12500

# Elasticsearch output configuration is generated

---
